# Money-Guard

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
scripts/: run_api.py  train_model.py
src/fraud_detection/: __init__.py  api.py  config.py  data.py  features.py  pipeline.py  predict.py  train.py
tests/: test_features.py  test_predict.py
